// Copyright 2025 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
//
// This file is used for testing only. It contains a subset of fields from
// components/sync/protocol/shared_tab_group_data_specifics.proto with
// additional fields for testing purposes.
syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package sync_pb.test_utils;

import "components/sync/protocol/unique_position.proto";

message SharedTabGroupDataSpecifics {
  optional string guid = 1;
  oneof entity {
    SharedTabGroup tab_group = 3;
    SharedTab tab = 4;
  }
  optional int64 update_time_windows_epoch_micros = 5;
}

message SharedTabGroup {
  optional string title = 1;
  enum Color {
    UNSPECIFIED = 0;
  }
  optional Color color = 2;
  optional string originating_tab_group_guid = 3;

  optional string extra_field_for_testing = 10000;
}

message SharedTab {
  optional string url = 1;
  optional string title = 2;
  optional string shared_tab_group_guid = 4;
  optional UniquePosition unique_position = 5;

  optional string extra_field_for_testing = 10000;
}
